--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,8 @@ jobs:
         uses: actions/checkout@master
 
        # 打包构建
-      - name: Build 🔧
-        uses: actions/setup-node@master
-        run: npm install && npm run build
+      - run: npm install
+      - run: npm run build
 
       # deploy
       - name: Deploy 🚀
